--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/maleekaFatima02/backend-hiring-test-1#readme",
   "dependencies": {
+    "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "g": "^2.0.1",
     "ngrok": "^4.3.1",
