--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "g": "^2.0.1",
-    "ngrok": "^4.3.1",
-    "nodemon": "^2.0.19"
+    "mongoose": "^6.4.3",
+    "nodemon": "^2.0.19",
+    "twilio": "^3.78.0"
   }
 }
