--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
   "homepage": "https://github.com/maleekaFatima02/backend-hiring-test-1#readme",
   "dependencies": {
     "dotenv": "^16.0.1",
+    "ejs": "^3.1.8",
     "express": "^4.18.1",
     "g": "^2.0.1",
+    "moment": "^2.29.4",
     "mongoose": "^6.4.3",
     "nodemon": "^2.0.19",
     "twilio": "^3.78.0"
